# python-autoupdate

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: autoupdate.py
src/autoupdate/: __init__.py  archive.py  autoupdate.py  common.py  git.py
test/update_from_tgz/: test.py
