[project]
name = "autoupdate"
version = "0.0.3"
description = "A library to assist with updating Python applications"
requires-python = ">=3.8"
license = {file = "LICENSE" }
dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/nsw42/python-autoupdate"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
